# ratatui-toolkit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: pages.yml
demo/: demo.tape  ratatui-toolkit-demo.cast
examples/: markdown_demo_full.md  showcase.rs
justfiles/development/: run.just  web.just
justfiles/utilities/: demo-interactive.just  demo-record.just
src/: lib.rs
src/button/: mod.rs
src/clickable_scrollbar/: mod.rs
src/clickable_scrollbar/constructors/: mod.rs
src/clickable_scrollbar/methods/: mod.rs  mouse_handler.rs  scroll_trait.rs  stateful_widget.rs  stateful_widget_trait.rs
src/dialog/: mod.rs
src/dialog/constructors/: new.rs
src/dialog/methods/: get_border_color.rs  mod.rs
src/dialog/widget/: mod.rs
src/file_system_tree/: mod.rs
src/file_system_tree/constructors/: new.rs  new_config.rs  new_entry.rs  with_config.rs  with_dark_theme.rs  with_dir_style.rs  with_file_style.rs  with_selected_style.rs  with_show_hidden.rs
src/file_system_tree/methods/: expand_directory.rs  get_entry_at_path.rs  get_selected_entry.rs  get_visible_paths.rs  load_directory.rs  mod.rs  select_next.rs  select_previous.rs  toggle_selected.rs
src/fuzzy_finder/: functions.rs  mod.rs
src/markdown_renderer/: file_watcher.rs  markdown_source.rs  markdown_style.rs  markdown_widget.rs  mod.rs  render_markdown_to_lines.rs  scroll_manager.rs  syntax_highlighter.rs  theme.rs
src/master_layout/: layout_manager.rs
src/toast/: mod.rs
src/tree_view/: mod.rs
web-demo/: Cargo.toml  Trunk.toml  index.html
web-demo/src/: main.rs
(+138 files in other folders)
