[package]
name = "ratatui-toolkit-web-demo"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
ratzilla = "0.2.0"
ratatui = { version = "0.29", default-features = false, features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
